Reorganize knockout bindings so that form validation can take place on view model.

--- a/corehq/apps/userreports/templates/userreports/partials/report_builder_configure_report.html
+++ b/corehq/apps/userreports/templates/userreports/partials/report_builder_configure_report.html
@@ -67,6 +67,16 @@
                 );
             });
         };
-        ko.applyBindings(new propertyList({hasFormatCol: true}), $("#filters-table").parent().get(0));
+
+        var configForm = function(){
+            this.filtersList = new propertyList({hasFormatCol: true});
+            this.columnsList = new propertyList({hasFormatCol:false});
+            this.submitHandler = function(){
+                // TODO: Validate the configuration and return False if invalid.
+                return true;
+            }
+        };
+        var formViewModel = new configForm();
+        ko.applyBindings(formViewModel, $("#report-config-form").get(0));
     </script>
 {% endblock %}
