Use base less variables

--- a/corehq/apps/style/static/style/lib/bootstrap/less/popovers.less
+++ b/corehq/apps/style/static/style/lib/bootstrap/less/popovers.less
@@ -44,9 +44,9 @@
 
 .popover-content {
   padding: 9px 14px;
-  font-size: 12px;
+  font-size: @baseFontSize;
   font-weight: normal;
-  line-height: normal;
+  line-height: @baseLineHeight;
 }
 
 // Arrows
