--- a/corehq/apps/app_manager/templates/app_manager/partials/build_errors.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/build_errors.html
@@ -98,10 +98,11 @@
                         {% case "all forms in case list module must have same case management" %}
                             {% url "view_module" domain app.id error.module.id as module_url %}
                             {% url "view_form" domain app.id error.module.id error.form.id as form_url %}
-                            {% blocktrans with module_name=error.module.name|trans:langs form_name=error.form.name|trans:langs %}
+                            {% blocktrans with module_name=error.module.name|trans:langs form_name=error.form.name|trans:langs expected_tag=error.expected_tag %}
                             The <a href="{{ form_url }}">{{ form_name }}</a> form in the <a href="{{ module_url }}">{{ module_name }}</a>
                             module loads a case with a different case tag to the other forms in the module.
                             All forms in a module that has a case registration form selected must use the same case tag.
+                            Expected case tag: <strong>{{ expected_tag }}</strong>
                             {% endblocktrans %}
                         {% case "forms in case list module must use modules details" %}
                             {% url "view_module" domain app.id error.module.id as module_url %}
