--- a/corehq/apps/app_manager/templates/app_manager/partials/settings/app_settings.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/settings/app_settings.html
@@ -25,6 +25,34 @@
   </span>
 </script>
 
+<script type="text/html" id="CommcareSettings.widgets.multiSelect">
+  <span>
+    <span data-bind="if: valueIsLegal()">
+      <select multiple="multiple"
+              class="col-sm-3 form-control"
+              data-bind="options: options,
+                         selectedOptions: selectedOptions,
+                         optionsText: 'label',
+                         attr: {
+                           disabled: !enabled(),
+                           id: inputId
+                         }"></select>
+    </span>
+    <span data-bind="if: !valueIsLegal()" >
+      <select multiple="multiple"
+              class="col-sm-3 form-control error"
+              data-bind="options: options,
+                         selectedOptions: writeSelectedOptions,
+                         optionsText: 'label',
+                         attr: {
+                           disabled: !enabled(),
+                           id: inputId
+                         },
+                         optionsCaption: value()"></select>
+    </span>
+  </span>
+</script>
+
 <script type="text/html" id="CommcareSettings.widgets.bool">
   <div class="checkbox-app-settings">
     <input type="checkbox"
