--- a/corehq/apps/users/templates/users/roles_and_permissions.html
+++ b/corehq/apps/users/templates/users/roles_and_permissions.html
@@ -230,7 +230,7 @@
                                     {% trans "Edit Role" %}
                                 </span>
             </button>
-            <button class="btn btn-danger" data-bind="visible: $data._id && !$data.hasUsersAssigned && $root.allowEdit, click: $data._id ? $root.setRoleBeingDeleted : null">
+            <button class="btn btn-danger" data-bind="visible: $data._id && !$data.preventRoleDelete && $root.allowEdit, click: $data._id ? $root.setRoleBeingDeleted : null">
               <i class="fa fa-trash"></i>
               {% trans "Delete Role" %}
             </button>
