--- a/corehq/apps/cloudcare/templates/cloudcare/spec/mocha.html
+++ b/corehq/apps/cloudcare/templates/cloudcare/spec/mocha.html
@@ -3,6 +3,11 @@
 
 {% block dependencies %}
   {% include "formplayer/dependencies.html" %}
+  <script src="{% static 'cloudcare/js/formplayer/spec/fixtures/case_list.js' %}"></script>
+  <script src="{% static 'cloudcare/js/formplayer/spec/fixtures/case_grid_list.js' %}"></script>
+  <script src="{% static 'cloudcare/js/formplayer/spec/fixtures/case_tile_list.js' %}"></script>
+  <script src="{% static 'cloudcare/js/formplayer/spec/fixtures/form_tree.js' %}"></script>
+  <script src="{% static 'cloudcare/js/formplayer/spec/fixtures/menu_list.js' %}"></script>
   <script src="{% static 'cloudcare/js/formplayer/spec/fixtures.js' %}"></script>
 {% endblock %}
 
