--- a/corehq/apps/cloudcare/templates/cloudcare/spec/mocha.html
+++ b/corehq/apps/cloudcare/templates/cloudcare/spec/mocha.html
@@ -4,6 +4,7 @@
 {% block dependencies %}
   {% include "formplayer/dependencies.html" %}
   <script src="{% static 'cloudcare/js/formplayer/spec/fixtures/util.js' %}"></script>
+  <script src="{% static 'cloudcare/js/formplayer/spec/fake_formplayer.js' %}"></script>
   <script src="{% static 'cloudcare/js/formplayer/spec/fixtures/case_list.js' %}"></script>
   <script src="{% static 'cloudcare/js/formplayer/spec/fixtures/case_grid_list.js' %}"></script>
   <script src="{% static 'cloudcare/js/formplayer/spec/fixtures/case_tile_list.js' %}"></script>
