--- a/corehq/messaging/scheduling/templates/scheduling/conditional_alert_list.html
+++ b/corehq/messaging/scheduling/templates/scheduling/conditional_alert_list.html
@@ -14,6 +14,7 @@
 
 {% block page_content %}
   {% registerurl 'conditional_alert_list' domain %}
+  {% registerurl 'conditional_alert_list_refresh' domain %}
   {% registerurl 'edit_conditional_alert' domain '---' %}
   {% initial_page_data 'limit_rule_restarts' limit_rule_restarts %}
 
