use the right property

--- a/corehq/apps/reports/templates/reports/reportdata/case_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/case_data.html
@@ -60,7 +60,7 @@
             <div class="tab-content">
               <div class="tab-pane" id="properties">
                 <div class="row-fluid">
-                  {% if dynamic_properties %}
+                  {% if dynamic_properties_as_table %}
                     {% include "hqwebapp/proptable/property_table.html" with tables=dynamic_properties_as_table %}
                   {% else %}
                     <div class="well clearfix col-lg-10 col-md-12 col-sm-12">
