--- a/corehq/motech/generic_inbound/templates/generic_inbound/api_list.html
+++ b/corehq/motech/generic_inbound/templates/generic_inbound/api_list.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load hq_shared_tags %}
 
-{% requirejs_main "hqwebapp/js/crud_paginated_list_init" %}
+{% requirejs_main "generic_inbound/js/api_list" %}
 
 {% block pagination_header %}
   <h3>{% trans 'Manage Generic Inbound APIs' %}</h3>
@@ -12,8 +12,11 @@
 <script type="text/html" id="base-api-config-template">
     <td data-bind="text: name"></td>
     <td data-bind="text: description"></td>
-    <td><pre data-bind="text: url"></pre></td>
+    <td><pre data-bind="text: url, attr: {id: 'api_url_' + id}"></pre></td>
     <td> <!-- actions -->
+        <a class="btn btn-default copy_url" data-bind="click: () => copyData('api_url_' + id)">
+          <i class="fa fa-copy"></i> {% trans "Copy URL" %}
+        </a>
         <a class="btn btn-primary"
                 data-bind="attr: {href: edit_url}">
             {% trans "Edit" %}
