Updated help text

--- a/corehq/apps/app_manager/templates/app_manager/partials/modules/case_search_property.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/modules/case_search_property.html
@@ -58,7 +58,7 @@
                       {% trans 'In "YYYY-MM-DD to YYYY-MM-DD" format' %}
                     </p>
                     <p class="help-block" data-bind="visible: appearanceFinal() == 'fixture' && isMultiselect()">
-                      {% trans 'e.g. Use #,# as separator to select multiple values' %}
+                      {% trans "Separate multiple values with spaces. Use quotes to enclose values that contain spaces." %}
                     </p>
                   </div>
                 </div>
