use page_title block for titles

--- a/corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
+++ b/corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
@@ -5,13 +5,9 @@
 
 {% requirejs_main "generic_inbound/js/api_edit" %}
 
+{% block page_title %}{{ page_title }}{% endblock %}
 {% block page_content %}
 <div id="edit-api">
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8">
-      <h3>{% trans "Edit Generic Inbound API " %}</h3>
-    </div>
-  </div>
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8">
       <div class="form-group">
