--- a/corehq/apps/hqwebapp/templates/hqwebapp/full_screen.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/full_screen.html
@@ -5,7 +5,7 @@
 {% block content %}
   {% block page_breadcrumbs %}{% endblock %}
   <div class="container-fluid">
-    <div id="hq-content">
+    <div id="hq-content">`
       {% captureas page_title_block %}{% block page_title %}{% endblock page_title %}{% endcaptureas %}
       {% if page_title_block %}
         <div class="page-header" style="margin-top: 0;">
