--- a/corehq/apps/users/templates/users/partials/edit_role_modal.html
+++ b/corehq/apps/users/templates/users/partials/edit_role_modal.html
@@ -167,6 +167,23 @@
                 </div>
               </div>
             </div>
+
+              <div class="form-group" data-bind="visible: canSeeAnyReports">
+              <label class="col-sm-4 control-label">
+                {% trans "Download and Email Reports" %}
+              </label>
+              <div class="col-sm-8 controls">
+                <div class="form-check">
+                  <input type="checkbox"
+                    id="download-and-email-reports-checkbox"
+                    data-bind="checked: permissions.download_reports, disable: !$root.allowEdit" />
+                  <label for="download-and-email-reports-checkbox">
+                    {% trans "Allow role to download and email report data." %}
+                  </label>
+                </div>
+              </div>
+            </div>
+
             {% if request|toggle_enabled:"EMBEDDED_TABLEAU" %}
               <div class="form-group" data-bind="visible: !tableauPermissions.all()">
                 <label class="col-sm-4 control-label">
@@ -460,21 +477,6 @@
                       </label>
                     </div>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-4 control-label">
-                {% trans "Download and Email Reports" %}
-              </label>
-              <div class="col-sm-8 controls">
-                <div class="form-check">
-                  <input type="checkbox"
-                         id="download-and-email-reports-checkbox"
-                         data-bind="checked: permissions.download_reports, disable: !$root.allowEdit" />
-                  <label for="download-and-email-reports-checkbox">
-                    {% trans "Allow role to download and email report data." %}
-                  </label>
                 </div>
               </div>
             </div>
