Rudimentarily display case property description

--- a/corehq/apps/hqwebapp/templates/hqwebapp/proptable/property_table.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/proptable/property_table.html
@@ -21,6 +21,9 @@
                   {% else %}
                     {{ cell.name }}
                   {% endif %}
+                  {% if cell.description %}
+                    <i class="fa fa-info-circle" title="{{ cell.description }}"></i>
+                  {% endif %}
                 </th>
                 <td>
                   {{ cell.value }}
