--- a/corehq/apps/export/templates/export/commcare_analytics.html
+++ b/corehq/apps/export/templates/export/commcare_analytics.html
@@ -4,11 +4,21 @@
 {% load compress %}
 {% load hq_shared_tags %}
 
+{% block page_title %}
+{% trans "CommCare Analytics" %}
+{% endblock %}
+
 {% block page_content %}
   {% blocktrans %}
-  <p>Click the button below to navigate to the CommCare Analytics tool.</p>
+    CommCare Analytics is a Superset based tool that allows data exploration and data visualization.
+<!-- Add link to public docs here when the docs are ready -->
+<!--    For more information on Superset and how to get started, read the-->
+<!--    <a href="" target="_blank">documentation</a>.-->
   {% endblocktrans %}
-  <button class="btn btn-primary" type="button" onclick="window.open('{{ analytics_redirect_url }}', '_blank')">
-    {% trans "Navigate to Superset" %}
-  </button>
+
+  {% blocktrans %}
+  <a href="{{ analytics_redirect_url }}" target="_blank">
+    Navigate to Superset
+  </a>
+  {% endblocktrans %}
 {% endblock %}
