--- a/corehq/apps/cloudcare/templates/formplayer/dependencies.html
+++ b/corehq/apps/cloudcare/templates/formplayer/dependencies.html
@@ -29,7 +29,7 @@
   <script src="{% static 'crypto-js/crypto-js.js' %}"></script>
   <script src="{% static 'integration/js/hmac_callout.js' %}"></script>
   <script src="{% static 'cloudcare/js/formplayer/constants.js' %}"></script>
-  <script src="{% static 'cloudcare/js/util.js' %}"></script>
+  <script src="{% static 'cloudcare/js/utils.js' %}"></script>
   <script src="{% static 'Caret.js/dist/jquery.caret.js' %}"></script>
   <script src="{% static 'At.js/dist/js/jquery.atwho.js' %}"></script>
   <script src="{% static 'fast-levenshtein/levenshtein.js' %}"></script>
