property_table.html is only used for case data

--- a/corehq/apps/reports/templates/reports/partials/case_property_table.html
+++ b/corehq/apps/reports/templates/reports/partials/case_property_table.html
@@ -1,3 +1,5 @@
+{# This table is used for case metadata and for case properties #}
+
 <div class="property-table-row">
   {% for table in tables %}
     <div class="property-table-container">
