--- a/corehq/apps/reports/templates/reports/form/partials/single_form.html
+++ b/corehq/apps/reports/templates/reports/form/partials/single_form.html
@@ -273,7 +273,7 @@
                     {% if cases|length == 1 %}in{% endif %}"
                  id="form-case-acc-{{ forloop.counter }}">
               <div class="accordion-inner">
-                {% include "hqwebapp/proptable/dl_property_table.html" with tables=case_data.table %}
+                {% include "hqwebapp/proptable/dl_property_table.html" with table=case_data.table %}
               </div>
             </div>
           </div>
@@ -307,7 +307,7 @@
 
   {% if form_meta_data %}
     <div class="tab-pane" id="form-metadata">
-      {% include "hqwebapp/proptable/dl_property_table.html" with tables=form_meta_data %}
+      {% include "hqwebapp/proptable/dl_property_table.html" with table=form_meta_data %}
     </div>
   {% endif %}
 
