Remove an unneeded layer of abstraction

--- a/corehq/apps/reports/templates/reports/partials/case_property_table.html
+++ b/corehq/apps/reports/templates/reports/partials/case_property_table.html
@@ -2,7 +2,7 @@
 
 <table class="table table-bordered case-property-table">
   <tbody>
-  {% for row in table.rows %}
+  {% for row in rows %}
     <tr>
       {% for cell in row %}
         {% if not cell.colspan %}
