feat (USH-2460_webapp_form_UI): Improve print layout of form
corrected stickler formatting

--- a/corehq/apps/cloudcare/templates/cloudcare/formplayer_home.html
+++ b/corehq/apps/cloudcare/templates/cloudcare/formplayer_home.html
@@ -101,12 +101,12 @@
     <div id="menu-container">
       <section id="formplayer-progress-container"></section>
       <div id="restore-as-region"></div>
-      <div id="breadcrumb-region"></div>
+      <div id="breadcrumb-region" class="print-container"></div>
       <section id="cloudcare-notifications" class="container notifications-container"></section>
       <div class="container case-tile-container">
         <div id="persistent-case-tile"></div>
       </div>
-      <div id="menu-region" class="container"></div>
+      <div id="menu-region" class="container print-container"></div>
       <section id="webforms" data-bind="
                 template: {
                     name: 'form-fullform-ko-template',
