--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp-main.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp-main.less
@@ -17,3 +17,4 @@ formplayer, please make changes to the cloudcare styles.
 @import "formplayer-webapp/module";
 @import "formplayer-webapp/form";
 @import "formplayer-webapp/formnav";
+@import "formplayer-webapp/version";
