--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/content.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/content.less
@@ -44,3 +44,25 @@ body {
     margin-bottom: 20px;
   }
 }
+
+@media print{
+  * {
+    visibility: collapse;
+  }
+
+  .print-container, .print-container * {
+    visibility: visible;
+  }
+
+  .noprint-sub-container{
+    display: none;
+  }
+
+  #cloudcare-main{
+    padding:0px;
+  }
+
+  .case-tile-container>div {
+    margin-bottom: 0px;
+  }
+}
