--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
@@ -128,3 +128,23 @@
     }
   }
 }
+
+
+@media print {
+  .form-container.print-container {
+    margin: 0px;
+    .page-header {
+      padding-top: 0px;
+    }
+  }
+
+  .last, .last * {
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+  }
+
+  .help-block{
+    color: #52616f !important;
+    font-size: 14px;
+  }
+}
