--- a/corehq/apps/hqwebapp/templates/hqwebapp/full_screen.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/full_screen.html
@@ -9,7 +9,7 @@
       {% captureas page_title_block %}{% block page_title %}{% endblock page_title %}{% endcaptureas %}
       {% if page_title_block %}
         <div class="page-header" style="margin-top: 0;">
-          <h1 style="font-size: 1.8em;">{{ page_title_block }}</h1>
+          <h1 class="lead" style="font-size: 1.8em;">{{ page_title_block }}</h1>
         </div>
       {% else %}
         {% block pre_page_content %}<div class="spacer"></div>{% endblock %}
