--- a/corehq/apps/data_interfaces/templates/data_interfaces/find_by_id.html
+++ b/corehq/apps/data_interfaces/templates/data_interfaces/find_by_id.html
@@ -4,13 +4,16 @@
 
 {% requirejs_main "data_interfaces/js/find_by_id" %}
 
+{% block page_title %}
+  {{ current_page.title }}
+{% endblock %}
+
 {% block page_content %}
   {% registerurl 'global_quick_find' %}
   {% registerurl 'list_case_exports' domain %}
   {% registerurl 'list_form_exports' domain %}
 
   {% blocktrans %}
-    <p class="lead">Find Data by ID</p>
     <p>
       This page allows you to directly access a specific form data or case data page.
       Read more on our <a href='https://confluence.dimagi.com/display/commcarepublic/Find+Data+by+ID'>help site</a>.
