--- a/corehq/apps/data_interfaces/templates/data_interfaces/list_deduplication_rules.html
+++ b/corehq/apps/data_interfaces/templates/data_interfaces/list_deduplication_rules.html
@@ -4,14 +4,13 @@
 
 {% requirejs_main 'data_interfaces/js/list_automatic_update_rules' %}
 
+{% block page_title %}
+  {{ current_page.title }}
+{% endblock %}
+
 {% block pagination_header %}
   <div class="row">
     <div class="col-sm-8">
-      <p class="lead">
-        {% blocktrans %}
-          Automatically find and update duplicate cases
-        {% endblocktrans %}
-      </p>
       <p>
         {% blocktrans %}
           Create rules for finding and updating duplicate cases.
