--- a/corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
+++ b/corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
@@ -7,6 +7,9 @@
 
 {% block page_title %}{{ page_title }}{% endblock %}
 {% block page_content %}
+{% initial_page_data "filters" filter_expressions %}
+{% initial_page_data "validations" validations %}
+{% initial_page_data "validation_form_errors" validation_form_errors %}
 <div id="edit-api">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8">
@@ -26,11 +29,66 @@
   <div class="spacer"></div>
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8">
-      <form class="form-horizontal" method="post">
+      <form class="form-horizontal" method="post" id="edit-api" data-bind="submit: validateForm">
         {% crispy form %}
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th class="col-sm-2">{% translate "Name" %}</th>
+              <th class="col-sm-4">{% translate "Expression" %}</th>
+              <th class="col-sm-4">{% translate "Message" %}</th>
+            </tr>
+          </thead>
+          <tbody data-bind="foreach: validations">
+            <tr>
+              <td data-bind="css: {'has-error': nameError}">
+                <input type="hidden" data-bind="value: id, attr: {name: `validations-${$index()}-id`}">
+                <input type="hidden" value="{{ api_model.id }}" data-bind="attr: {name: `validations-${$index()}-api`}">
+                <input type="text" maxlength="64" class="textinput textInput form-control" data-bind="
+                  value: name, attr: {name: `validations-${$index()}-name`}">
+                <span class='help-block' data-bind="visible: nameError">
+                  {% translate "Name is required and must be less than 64 characters" %}
+                </span>
+              </td>
+              <td data-bind="css: {'has-error': expressionError}">
+                <select class="select form-control" data-bind="
+                  value: expression_id,
+                  valueAllowUnset: true,
+                  options: $parent.filters,
+                  optionsText: 'label',
+                  optionsValue: 'id',
+                   attr: {name: `validations-${$index()}-expression`}
+                  ">
+                  </select>
+                  <span class='help-block' data-bind="visible: expressionError">
+                    {% translate "Expression is required" %}
+                  </span>
+              </td>
+              <td data-bind="css: {'has-error': messageError}">
+                <input type="text" class="textinput textInput form-control" data-bind="
+                  value: message, attr: {name: `validations-${$index()}-message`}">
+                  <span class='help-block' data-bind="visible: messageError">
+                    {% translate "Message is required" %}
+                  </span>
+              </td>
+{#              <input type="checkbox" name="validations-0-DELETE" id="id_validations-0-DELETE">#}
+            </tr>
+          </tbody>
+        </table>
+        <div>
+          <input type="hidden" name="validations-TOTAL_FORMS" data-bind="attr: {value: validations().length}">
+          <input type="hidden" name="validations-INITIAL_FORMS" data-bind="attr: {value: initialValidationCount}">
+          <input type="hidden" name="validations-MIN_NUM_FORMS" value="0">
+          <input type="hidden" name="validations-MAX_NUM_FORMS" value="1000">
+        </div>
+{#        {% crispy form2 %}#}
+        <button type="button" class="btn btn-primary" data-bind="click: addValidation">
+              <i class="fa fa-plus"></i>
+              {% trans "Add Validation" %}
+            </button>
         <div class="form-actions">
           <div class="col-xs-12 col-sm-8 col-md-8 col-lg-6 col-sm-offset-4 col-md-offset-4 col-lg-offset-2 controls">
-            <button class="btn btn-primary" type="submit" id="submit">{% trans "Save" %}</button>
+            <button class="btn btn-primary" type="submit" id="submit" data-bind="enabled: enableSubmit">{% trans "Save" %}</button>
             <a href="{% url 'configurable_api_list' domain %}" class="btn btn-default">{% trans "Cancel" %}</a>
           </div>
         </div>
