--- a/corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
+++ b/corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
@@ -31,6 +31,8 @@
     <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8">
       <form class="form-horizontal" method="post" id="edit-api" data-bind="submit: validateForm">
         {% crispy form %}
+        <fieldset>
+          <legend>{% translate "Validation Expressions" %}</legend>
         <table class="table table-striped table-hover">
           <thead>
             <tr>
@@ -96,6 +98,7 @@
           <i class="fa fa-plus"></i>
           {% trans "Add Validation" %}
         </button>
+        </fieldset>
         <div class="form-actions">
           <div class="col-xs-12 col-sm-8 col-md-8 col-lg-6 col-sm-offset-4 col-md-offset-4 col-lg-offset-2 controls">
             <button class="btn btn-primary" type="submit" id="submit" data-bind="enabled: enableSubmit">{% trans "Save" %}</button>
