--- a/corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
+++ b/corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
@@ -101,7 +101,7 @@
         </fieldset>
         <div class="form-actions">
           <div class="col-xs-12 col-sm-8 col-md-8 col-lg-6 col-sm-offset-4 col-md-offset-4 col-lg-offset-2 controls">
-            <button class="btn btn-primary" type="submit" id="submit" data-bind="enabled: enableSubmit">{% trans "Save" %}</button>
+            <button class="btn btn-primary" type="submit" id="submit" data-bind="enable: enableSubmit">{% trans "Save" %}</button>
             <a href="{% url 'configurable_api_list' domain %}" class="btn btn-default">{% trans "Cancel" %}</a>
           </div>
         </div>
